--- a/CSS/animation.css
+++ b/CSS/animation.css
@@ -1,6 +1,6 @@
 /* CSS/animation.css */
 body {
-  background-color: #f0fdf4;
+  background-color: rgb(170, 209, 209);
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
@@ -14,13 +14,12 @@ body {
   position: relative;
 }
 
-.message {
-  font-size: 1.2rem;
-  margin-top: 20px;
-  color: #065f46;
+/* plant */
+.plant {
+  position: relative;
 }
 
-/* Pot */
+/* pot */ 
 .pot {
   width: 60px;
   height: 40px;
@@ -31,35 +30,46 @@ body {
 
 /* Stem */
 .stem {
-  width: 8px;
+  position:absolute;
+  left: 50%;
+  bottom: 40px;
+  width: 12px;
   height: 0;
-  background-color: #228b22;
-  margin: 0 auto;
-  animation: growStem 2s forwards 1s;
+  transform: translateX(-50%);
+  background: #228b22;
+  border-radius: 6px;
+  z-index: 1;
+  transform-origin: bottom;
+  animation: stemGrow 2s ease-out 0.6s forwards;
 }
 
-/* Leaves */
+/* leaves */
 .leaf {
+  /*top: -35px;*/
   width: 30px;
   height: 15px;
   background-color: #2e8b57;
   border-radius: 15px 0;
   position: absolute;
   opacity: 0;
+  transform: scale(0.5);
 }
 
+/* Left leaf */
 .leaf1 {
-  top: 80px;
-  left: calc(50% - 35px);
-  transform: rotate(-30deg);
-  animation: growLeaf 1s 3s forwards;
+  top: -35px;
+  left: calc(50% - 30px);
+  transform: rotate(-30deg) scale(0.5);
+  transform-origin: right center;
+  animation: growLeaf 1.5s 2.5s forwards;
 }
-
+/* Right leaf */
 .leaf2 {
-  top: 80px;
+  top: -35px;
   left: calc(50% + 5px);
-  transform: rotate(30deg);
-  animation: growLeaf 1s 3.3s forwards;
+  transform: rotate(30deg) scale(0.5);
+  transform-origin: left center;
+  animation: growLeaf 1.5s 3s forwards;
 }
 
 /* Watering can */
@@ -68,44 +78,45 @@ body {
   height: 30px;
   background-color: #1e90ff;
   position: absolute;
-  top: -50px;
-  left: -80px;
+  top: -150px;
+  left: 120px;
   border-radius: 5px;
   animation: moveCan 1.5s forwards;
 }
 
+/*Handle*/
 .handle {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 25px;
   border: 3px solid #1e90ff;
   border-radius: 50%;
   position: absolute;
-  top: -10px;
-  left: -15px;
+  top: -6px;
+  left: 30px;
 }
 
+/*Spout*/
 .spout {
-  width: 15px;
+  width: 25px;
   height: 6px;
   background-color: #1e90ff;
   position: absolute;
-  right: -15px;
+  left: -20px;
   top: 10px;
-  transform: rotate(-20deg);
+  transform: rotate(30deg);
 }
 
-/* Water drops */
+/*Water drops*/
 .water-drop {
   width: 8px;
   height: 8px;
-  background-color: #00bfff;
+  background-color: #1e90ff;
   border-radius: 50%;
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
 }
-
 .drop1 {
   animation: drop 1s infinite;
   animation-delay: 1.8s;
@@ -121,34 +132,29 @@ body {
   animation-delay: 2.4s;
 }
 
-/* Animations */
-@keyframes moveCan {
-  to {
-    transform: translate(120px, 60px) rotate(-30deg);
-  }
+
+/* Animation */
+@keyframes stemGrow {
+  from { height: 0px;}
+  to {height: 50px;}
 }
 
-@keyframes growStem {
-  to {
-    height: 60px;
-  }
-}
-
+/* Leaf animation */
 @keyframes growLeaf {
-  to {
-    opacity: 1;
-  }
+  from { opacity: 0; transform: scale(0.5); }
+  to { opacity: 1; transform: scale(1); }
+}
+
+/*move can*/
+@keyframes moveCan {
+  to {transform: translate(-60px, 40px) rotate(-50deg);}
 }
 
 @keyframes drop {
-  0% {
-    top: 30px;
-    left: 60px;
-    opacity: 1;
-  }
+  0% {top: -65px; left: 45px; opacity: 1;}
   100% {
-    top: 90px;
-    left: 65px;
+    top: 5px;
+    left: 30px;
     opacity: 0;
   }
 }
